...
            {
              text: "Cancel",
              onPress: () => resolve(null),
              style: "cancel",
            },
            {
              text: "OK",
              onPress: (info) => resolve(info || ""),
            },
          ]);
        });

        // If user pressed Cancel or provided no input, exit the function
...
        "mainGroup": "Arms",  
        "name": "Barbell Curl",
        "primaryMuscle": "Biceps"
      }
    ]
    Input Data:
    Workout History:  ${workoutHistory}
    Target Muscle Groups: ${userInput}
    Default Exercises: ${await getDefaultExercises()}
    Custom Exercises: ${await getCustomExercises()}

Use exercises from Default Exercises and Custom Exercises to create the workout
 and if exercises are missing create them and give them back to me as an object
...
