...
            <Ionicons
              name={focused ? "trophy" : "trophy-outline"}
              size={focused ? 30 : 25}
              color="white"
            />
          ),
          headerTitle: "Ranking",
          tabBarLabel: "",
        }}
      />
      <Tabs.Screen
        name="profile"
        options={{
          title: "Profile",
          headerTitleStyle: { fontSize: scale(18), color: "white" },
          tabBarIcon: ({ focused }) => (
            <Ionicons
              name={focused ? "person" : "person-outline"}
              size={focused ? 30 : 25}
              color="white"
...
