...
          placeholder="Name of Exercise..."
          value={title}
          onChangeText={(text) => setTitle(text)}
        />
      </View>
      <View style={styles.inputContainer}>
        <Text style={styles.label}>Muscle Group</Text>
        <TouchableOpacity
          style={styles.dropdownInput}
          onPress={openMuscleGroupSheet}
        >
          <Text style={{ color: "white", fontSize: 16 }}>
            {MUSCLE_GROUP.find((option) => option.value === mainGroup)?.label ||
...
